@@ -33,6 +33,7 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC5697 providing Other Certificates Extension
 - Add RFC4683 providing Subject Identification Method (SIM)
 - Add RFC4476 providing Attribute Certificate Policies Extension
+- Add RFC5636 providing Traceable Anonymous Certificate
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
